# RustWebDevelopment_Gruber

./: .gitignore
ch_02/src/: main.rs
ch_07/handle-errors/src/: lib.rs
ch_07/src/routes/: question.rs
ch_08/src/: profanity.rs
listings/listings_06/listing_6_27/: Cargo.toml
listings/listings_06/listing_6_29/: Cargo.toml  launch.json
listings/listings_07/database_scripts/: CreateTables.sql
listings/listings_07/listing_7_03/: Cargo.toml
listings/listings_07/listing_7_05/: Cargo.toml
listings/listings_07/listing_7_05/src/: store.rs
listings/listings_07/listing_7_07/: Cargo.toml
listings/listings_07/listing_7_08/: Cargo.toml
listings/listings_07/listing_7_09/src/: store.rs
listings/listings_07/listing_7_11/src/: store.rs
listings/listings_07/listing_7_13/src/: store.rs
listings/listings_07/listing_7_14/: Cargo.toml
listings/listings_07/listing_7_14/src/routes/: question.rs
listings/listings_07/listing_7_15/handle-errors/: Cargo.toml
listings/listings_07/listing_7_15/src/: store.rs
listings/listings_07/listing_7_16/: Cargo.toml
listings/listings_07/listing_7_16/src/: store.rs
listings/listings_07/listing_7_17/src/: store.rs
listings/listings_07/listing_7_18/src/: store.rs
listings/listings_07/listing_7_19/src/: store.rs
listings/listings_07/listing_7_22/: Cargo.toml
listings/listings_07/listing_7_23/: Cargo.toml
listings/listings_07/listing_7_28/: Cargo.toml
listings/listings_07/listing_7_32/: Cargo.toml
listings/listings_08/listing_8_01/: Cargo.toml
listings/listings_08/listing_8_02/: -R listing_8_10 listing_8_15  Cargo.toml
listings/listings_08/listing_8_03/: Cargo.toml
listings/listings_08/listing_8_10/: Cargo.toml
listings/listings_08/listing_8_13/: Cargo.toml
listings/listings_08/listing_8_23/: Cargo.toml
listings/listings_08/listing_8_23/handle-errors/: Cargo.toml
listings/listings_08/listing_8_23/src/: profanity.rs
listings/listings_08/listing_8_27/: Cargo.toml
(+85 files in other folders)
