[package]
name="practical-rust-book"
version="0.1.0"
edition="2021"

[dependencies]
warp="0.3"
parking_lot="0.12.0"
serde={ version = "1.0", features = ["derive"] }
serde_json="1.0"
tokio={ version = "1", features = ["full"]}
handle-errors={path = "handle-errors"}
uuid={ version = "1.1", features = ["v4"]}
tracing={ version = "0.1", features = ["log"] }
tracing-subscriber={ version = "0.3", features = ["env-filter"] }
sqlx={ version = "0.6", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }

[editor]
line_wrapping=false
line_break_column=72
auto_continue_multiline=true

[file_prefs]
final_new_line=true
ensure_convert_new_lines=false
strip_trailing_spaces=false
replace_tabs=false

[indentation]
indent_width=4
indent_type=1
indent_hard_tab_width=8
detect_indent=true
detect_indent_width=true
indent_mode=2

[project]
name=untitled
base_path=
description=

[long line marker]
long_line_behaviour=1
long_line_column=72

[files]
current_page=0
FILE_NAME_0=0;Rust;0;EUTF-8;0;1;0;%2Fhome%2Fteisler%2FDocuments%2FDevelopment%2FRustWebDevelopment_Gruber%2Flistings%2Flistings_07%2Flisting_7_17%2Fsrc%2Fstore.rs;0;4

[VTE]
last_dir=/home/teisler
